fix history color in dark mode + flip colors of and/or

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ html, body {
   --modal-backdrop-color: light-dark(rgba(200,200,200,0.7), rgba(23, 22, 32, 0.849));
   --status-inactive-color: light-dark(grey, grey);
   --status-ok-color: light-dark(forestgreen, forestgreen);
-  --or-state-bg-color: light-dark(#eee, #1a1a1a);
-  --and-state-bg-color: light-dark(white, rgb(0, 0, 0));
+  --or-state-bg-color: light-dark(#eee, #000000);
+  --and-state-bg-color: light-dark(white, rgb(46, 46, 46));
   --rountangle-stroke-color: light-dark(black, #d4d4d4);
   --active-state-bg-color: light-dark(rgb(255, 240, 214), rgb(53, 37, 18));
   --active-state-border-color: light-dark(rgb(205, 133, 0), rgb(235, 124, 21));
